k8s-eks/istio/resources/00-gateway-class.yaml
# Istio Gateway Class
# install-istio.sh 스크립트에서 자동 생성되지만, 수동 배포도 가능
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
