k8s-eks/istio/resources/04-httproute-payment-service.yaml
# Payment Service HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-service-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: ecommerce-gateway
  hostnames:
    - "api.ecommerce.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/payments
      backendRefs:
        - name: payment-service
          port: 8080
          weight: 100

---
# Payment Service Webhook Route (Webhook Gateway)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pg-webhook-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: webhook-gateway
  hostnames:
    - "webhook.ecommerce.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhooks/payment
      backendRefs:
        - name: payment-service
          port: 8080
          weight: 100
