k8s-eks/istio/resources/04-httproute-review-service.yaml
# Review Service HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: review-service-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: ecommerce-gateway
  hostnames:
    - "api.ecommerce.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/reviews
      backendRefs:
        - name: review-service
          port: 8080
          weight: 100
