k8s-eks/istio/resources/04-httproute-store-service.yaml
# Store Service HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: store-service-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: ecommerce-gateway
  hostnames:
    - "api.ecommerce.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/stores
      backendRefs:
        - name: store-service
          port: 8080
          weight: 100
